# image_utils

./: .cruft.json  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/source/: conf.py  image_utils.rst  index.rst  installation.md  modules.rst
src/image_utils/: app.py  definitions.py  main.py
src/image_utils/assets/: style.css
src/image_utils/pages/: image_compressor_layout.py  image_to_pdf_layout.py
tests/: test_example_function.py  test_main.py
